# Course-GenomeMapper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: mapper.yml
include/: CMakeLists.txt  aligner.cpp  aligner.hpp  ivory_config.hpp.in  minimizer.cpp  minimizer.hpp
src/: alignment.cpp  alignment.hpp  main.cpp
test/: ivory_mapper_test.cpp  mapper_test.cpp
